cmake_minimum_required(VERSION 2.8)
project( iciview )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( iciview iciview.cpp )
add_executable( calibrate calibrate.cpp )
target_link_libraries( iciview ${OpenCV_LIBS} )
target_link_libraries( calibrate ${OpenCV_LIBS} )
